--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   "homepage": "https://github.com/Alfred-Lau/backend-api#readme",
   "dependencies": {
     "babel-eslint": "^8.2.2",
+    "eslint": "^4.18.2",
     "koa": "^2.5.0",
+    "koa-body": "^2.5.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-cors": "^0.0.16",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "mysql": "^2.15.0"
   }
 }
